GearsetPOC/force-app/main/default/objects/Partner_Rules__c/Partner_Rules__c.object-meta.xml
<CustomObject>
    <label>Partner Rules</label>
    <nameField>
        <displayFormat>PR-{0000000000}</displayFormat>
        <label>Partner Rules Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>