GearsetPOC/force-app/main/default/objects/Partner_Rules__c/fields/History_Days__c.field-meta.xml
<CustomField>
    <fullName>History_Days__c</fullName>
    <label>History Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>