GearsetPOC/force-app/main/default/objects/Partner_Rules__c/fields/Minimum_transfer__c.field-meta.xml
<CustomField>
    <fullName>Minimum_transfer__c</fullName>
    <label>Minimum transfer</label>
    <precision>12</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>