GearsetPOC/force-app/main/default/objects/Partner_Rules__c/fields/MultipleOf__c.field-meta.xml
<CustomField>
    <fullName>MultipleOf__c</fullName>
    <label>Multiple Of</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>