GearsetPOC/force-app/main/default/objects/Partner_Rules__c/fields/Points_multiplier__c.field-meta.xml
<CustomField>
    <fullName>Points_multiplier__c</fullName>
    <label>Points multiplier</label>
    <precision>15</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>