GearsetPOC/force-app/main/default/objects/Partner_Rules__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Partner__c</columns>
    <columns>Destination__c</columns>
    <columns>Comments__c</columns>
    <columns>Market__c</columns>
    <columns>Maximum_transfer__c</columns>
    <columns>Minimum_transfer__c</columns>
    <columns>MultipleOf__c</columns>
    <columns>Points_multiplier__c</columns>
    <columns>History_Days__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>